// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probando register Debe hacer el registro 1`] = `
<div
  className="register_main "
>
  <div
    className="register_container  justify-content-center container"
  >
    <h1
      className="auth_title text-center"
    >
      ¡BIENVENIDO A WORK ZONE!
    </h1>
    <h2
      className="auth_subtitle"
    >
      Información Personal
    </h2>
    <form
      className="register_form"
      onSubmit={[Function]}
    >
      <div
        className="d-flex  align-items-center justify-content-around form-row"
      >
        <div
          className="input_container form-group col-md-5 col-sm-12"
        >
          <label
            className="input_label form-label"
          >
            Nombre
          </label>
          <input
            autoComplete="off"
            className="input form-control"
            name="name"
            onChange={[Function]}
            type="text"
            value="my test"
          />
        </div>
        <div
          className="input_container form-group col-md-5 col-sm-12"
        >
          <label
            className="input_label form-label"
          >
            Apellido
          </label>
          <input
            autoComplete="off"
            className="input form-control"
            name="lastname"
            onChange={[Function]}
            type="text"
            value="testing"
          />
        </div>
      </div>
      <div
        className="d-flex  align-items-center justify-content-around form-row"
      >
        <div
          className="input_container form-group col-md-5 col-sm-12"
        >
          <label
            className="input_label form-label"
          >
            Fecha de Nacimiento
          </label>
          <input
            className="input form-control"
            name="birthday"
            onChange={[Function]}
            type="date"
            value="2000-10-04"
          />
        </div>
        <div
          className="input_container form-group col-md-5 col-sm-12"
        >
          <label
            className="input_label form-label"
          >
            Correo Electrónico
          </label>
          <input
            autoComplete="off"
            className="input form-control"
            name="email"
            onChange={[Function]}
            type="text"
            value="prueba2@gmail.com"
          />
        </div>
      </div>
      <div
        className="d-flex  align-items-center justify-content-around form-row"
      >
        <div
          className="input_container justify-content-around  form-group col-md-5 col-sm-12"
        >
          <label
            className="input_label form-label"
          >
            Contraseña
          </label>
          <input
            className="input form-control"
            name="password"
            onChange={[Function]}
            type="password"
            value="123456"
          />
        </div>
        <div
          className="input_container form-group col-md-5 col-sm-12"
        >
          <label
            className="input_label form-label"
          >
            Confirme su Contraseña
          </label>
          <input
            className="input form-control"
            name="password2"
            onChange={[Function]}
            type="password"
            value="123456"
          />
        </div>
      </div>
      <div
        className="d-flex align-items-center justify-content-around form-row"
      >
        <div
          className="input_container  form-group col-md-5 col-sm-12"
        >
          <label
            className="input_label form-label"
          >
            Usuario
          </label>
          <input
            autoComplete="off"
            className="input form-control"
            name="username"
            onChange={[Function]}
            type="text"
            value="testuser"
          />
        </div>
      </div>
      <div
        className="form-group"
      >
        <div
          className="auth_link"
        >
          <a
            className="link"
            href="/auth/login"
            onClick={[Function]}
          >
            ¿Ya tienes cuenta? ¡Inicia Sesión!
          </a>
        </div>
      </div>
      <div
        className="button"
      >
        <button
          className="auth_button btn btn-primary"
          disabled={false}
          type="submit"
        >
          REGISTRAR
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Probando register Debe mostrarse correctamente 1`] = `
<div
  className="register_main "
>
  <div
    className="register_container  justify-content-center container"
  >
    <h1
      className="auth_title text-center"
    >
      ¡BIENVENIDO A WORK ZONE!
    </h1>
    <h2
      className="auth_subtitle"
    >
      Información Personal
    </h2>
    <form
      className="register_form"
      onSubmit={[Function]}
    >
      <div
        className="d-flex  align-items-center justify-content-around form-row"
      >
        <div
          className="input_container form-group col-md-5 col-sm-12"
        >
          <label
            className="input_label form-label"
          >
            Nombre
          </label>
          <input
            autoComplete="off"
            className="input form-control"
            name="name"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="input_container form-group col-md-5 col-sm-12"
        >
          <label
            className="input_label form-label"
          >
            Apellido
          </label>
          <input
            autoComplete="off"
            className="input form-control"
            name="lastname"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="d-flex  align-items-center justify-content-around form-row"
      >
        <div
          className="input_container form-group col-md-5 col-sm-12"
        >
          <label
            className="input_label form-label"
          >
            Fecha de Nacimiento
          </label>
          <input
            className="input form-control"
            name="birthday"
            onChange={[Function]}
            type="date"
            value=""
          />
        </div>
        <div
          className="input_container form-group col-md-5 col-sm-12"
        >
          <label
            className="input_label form-label"
          >
            Correo Electrónico
          </label>
          <input
            autoComplete="off"
            className="input form-control"
            name="email"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="d-flex  align-items-center justify-content-around form-row"
      >
        <div
          className="input_container justify-content-around  form-group col-md-5 col-sm-12"
        >
          <label
            className="input_label form-label"
          >
            Contraseña
          </label>
          <input
            className="input form-control"
            name="password"
            onChange={[Function]}
            type="password"
            value=""
          />
        </div>
        <div
          className="input_container form-group col-md-5 col-sm-12"
        >
          <label
            className="input_label form-label"
          >
            Confirme su Contraseña
          </label>
          <input
            className="input form-control"
            name="password2"
            onChange={[Function]}
            type="password"
            value=""
          />
        </div>
      </div>
      <div
        className="d-flex align-items-center justify-content-around form-row"
      >
        <div
          className="input_container  form-group col-md-5 col-sm-12"
        >
          <label
            className="input_label form-label"
          >
            Usuario
          </label>
          <input
            autoComplete="off"
            className="input form-control"
            name="username"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="form-group"
      >
        <div
          className="auth_link"
        >
          <a
            className="link"
            href="/auth/login"
            onClick={[Function]}
          >
            ¿Ya tienes cuenta? ¡Inicia Sesión!
          </a>
        </div>
      </div>
      <div
        className="button"
      >
        <button
          className="auth_button btn btn-primary"
          disabled={false}
          type="submit"
        >
          REGISTRAR
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Probando register Debe mostrarse correctamente 2`] = `
<div
  className="register_main "
>
  <div
    className="register_container  justify-content-center container"
  >
    <h1
      className="auth_title text-center"
    >
      ¡BIENVENIDO A WORK ZONE!
    </h1>
    <h2
      className="auth_subtitle"
    >
      Información Personal
    </h2>
    <form
      className="register_form"
      onSubmit={[Function]}
    >
      <div
        className="d-flex  align-items-center justify-content-around form-row"
      >
        <div
          className="input_container form-group col-md-5 col-sm-12"
        >
          <label
            className="input_label form-label"
          >
            Nombre
          </label>
          <input
            autoComplete="off"
            className="input form-control"
            name="name"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="input_container form-group col-md-5 col-sm-12"
        >
          <label
            className="input_label form-label"
          >
            Apellido
          </label>
          <input
            autoComplete="off"
            className="input form-control"
            name="lastname"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="d-flex  align-items-center justify-content-around form-row"
      >
        <div
          className="input_container form-group col-md-5 col-sm-12"
        >
          <label
            className="input_label form-label"
          >
            Fecha de Nacimiento
          </label>
          <input
            className="input form-control"
            name="birthday"
            onChange={[Function]}
            type="date"
            value=""
          />
        </div>
        <div
          className="input_container form-group col-md-5 col-sm-12"
        >
          <label
            className="input_label form-label"
          >
            Correo Electrónico
          </label>
          <input
            autoComplete="off"
            className="input form-control"
            name="email"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="d-flex  align-items-center justify-content-around form-row"
      >
        <div
          className="input_container justify-content-around  form-group col-md-5 col-sm-12"
        >
          <label
            className="input_label form-label"
          >
            Contraseña
          </label>
          <input
            className="input form-control"
            name="password"
            onChange={[Function]}
            type="password"
            value=""
          />
        </div>
        <div
          className="input_container form-group col-md-5 col-sm-12"
        >
          <label
            className="input_label form-label"
          >
            Confirme su Contraseña
          </label>
          <input
            className="input form-control"
            name="password2"
            onChange={[Function]}
            type="password"
            value=""
          />
        </div>
      </div>
      <div
        className="d-flex align-items-center justify-content-around form-row"
      >
        <div
          className="input_container  form-group col-md-5 col-sm-12"
        >
          <label
            className="input_label form-label"
          >
            Usuario
          </label>
          <input
            autoComplete="off"
            className="input form-control"
            name="username"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="form-group"
      >
        <div
          className="auth_link"
        >
          <a
            className="link"
            href="/auth/login"
            onClick={[Function]}
          >
            ¿Ya tienes cuenta? ¡Inicia Sesión!
          </a>
        </div>
      </div>
      <div
        className="button"
      >
        <button
          className="auth_button btn btn-primary"
          disabled={false}
          type="submit"
        >
          REGISTRAR
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Probando register debe hacer el registro 1`] = `
<div
  className="register_main "
>
  <div
    className="register_container  justify-content-center container"
  >
    <h1
      className="auth_title text-center"
    >
      ¡BIENVENIDO A WORK ZONE!
    </h1>
    <h2
      className="auth_subtitle"
    >
      Información Personal
    </h2>
    <form
      className="register_form"
      onSubmit={[Function]}
    >
      <div
        className="d-flex  align-items-center justify-content-around form-row"
      >
        <div
          className="input_container form-group col-md-5 col-sm-12"
        >
          <label
            className="input_label form-label"
          >
            Nombre
          </label>
          <input
            autoComplete="off"
            className="input form-control"
            name="name"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="input_container form-group col-md-5 col-sm-12"
        >
          <label
            className="input_label form-label"
          >
            Apellido
          </label>
          <input
            autoComplete="off"
            className="input form-control"
            name="lastname"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="d-flex  align-items-center justify-content-around form-row"
      >
        <div
          className="input_container form-group col-md-5 col-sm-12"
        >
          <label
            className="input_label form-label"
          >
            Fecha de Nacimiento
          </label>
          <input
            className="input form-control"
            name="birthday"
            onChange={[Function]}
            type="date"
            value=""
          />
        </div>
        <div
          className="input_container form-group col-md-5 col-sm-12"
        >
          <label
            className="input_label form-label"
          >
            Correo Electrónico
          </label>
          <input
            autoComplete="off"
            className="input form-control"
            name="email"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="d-flex  align-items-center justify-content-around form-row"
      >
        <div
          className="input_container justify-content-around  form-group col-md-5 col-sm-12"
        >
          <label
            className="input_label form-label"
          >
            Contraseña
          </label>
          <input
            className="input form-control"
            name="password"
            onChange={[Function]}
            type="password"
            value=""
          />
        </div>
        <div
          className="input_container form-group col-md-5 col-sm-12"
        >
          <label
            className="input_label form-label"
          >
            Confirme su Contraseña
          </label>
          <input
            className="input form-control"
            name="password2"
            onChange={[Function]}
            type="password"
            value=""
          />
        </div>
      </div>
      <div
        className="d-flex align-items-center justify-content-around form-row"
      >
        <div
          className="input_container  form-group col-md-5 col-sm-12"
        >
          <label
            className="input_label form-label"
          >
            Usuario
          </label>
          <input
            autoComplete="off"
            className="input form-control"
            name="username"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="form-group"
      >
        <div
          className="auth_link"
        >
          <a
            className="link"
            href="/auth/login"
            onClick={[Function]}
          >
            ¿Ya tienes cuenta? ¡Inicia Sesión!
          </a>
        </div>
      </div>
      <div
        className="button"
      >
        <button
          className="auth_button btn btn-primary"
          disabled={false}
          type="submit"
        >
          REGISTRAR
        </button>
      </div>
    </form>
  </div>
</div>
`;
